[gd_scene load_steps=8 format=3 uid="uid://cdph0epquiqtx"]

[ext_resource type="Texture2D" uid="uid://b2kgogelxtr8q" path="res://assets/sprites/tile_0103.png" id="1_7lrbd"]
[ext_resource type="Script" path="res://scripts/MapNodeRenderer.gd" id="1_nf1td"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pybwk"]
radius = 8.24621

[sub_resource type="Animation" id="Animation_cuoee"]
resource_name = "OnHighlight"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.3, 1.3), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_4k1n6"]
resource_name = "OnSelect"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon/Line2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"on_map_node_selected"
}]
}

[sub_resource type="Animation" id="Animation_w51if"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Icon/Line2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s0ae6"]
_data = {
"OnHighlight": SubResource("Animation_cuoee"),
"OnSelect": SubResource("Animation_4k1n6"),
"RESET": SubResource("Animation_w51if")
}

[node name="MapNode" type="Area2D"]
position = Vector2(88, 34)
collision_mask = 0
script = ExtResource("1_nf1td")
metadata/_edit_horizontal_guides_ = [78.0]

[node name="Icon" type="Node2D" parent="."]

[node name="Line2D" type="Line2D" parent="Icon"]
modulate = Color(1, 1, 1, 0)
points = PackedVector2Array(16, 0, 0, -16, -16, 0, 0, 18)
closed = true
default_color = Color(0, 0.40003, 0.163512, 1)

[node name="Sprite2D" type="Sprite2D" parent="Icon"]
texture = ExtResource("1_7lrbd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_pybwk")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_s0ae6")
}

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
